cmake_minimum_required(VERSION 3.10)
project(mujoco-wrapper)

# find dependencies
find_package(ament_cmake REQUIRED)

# Install targets
install(PROGRAMS
  script/position.py
  script/joint_command_executor.py
  DESTINATION lib/${PROJECT_NAME}
)

install(DIRECTORY
  models
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
