<?xml version="1.0"?>
<package format="3">
  <name>mujoco_wrappers</name>
  <version>1.0.0</version>
  <description>mujoco ros2 and gymnasium wrappers</description>
  <maintainer email="Chen.WH@sjtu.edu.cn">ChenWH</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>