<?xml version="1.0"?>
<package format="3">
  <name>mujoco-wrapper</name>
  <version>1.0.0</version>
  <description>MuJoCo ROS2 and Gymnasium wrapper</description>
  <maintainer email="Chen.WH@sjtu.edu.cn">ChenWH</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>